--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.chargev'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.6-SNAPSHOT'
 sourceCompatibility = '11'
 
 configurations {
@@ -35,4 +35,12 @@ dependencies {
 
 test {
 	useJUnitPlatform()
+}
+
+bootJar {
+	launchScript()
+}
+
+springBoot {
+	buildInfo()
 }
